Filter Surface Pro 2017 non-gamepad HID devices

The Surface Pro 2017 is a hybrid laptop/tablet device with a
detachable keyboard. The keyboard is a composite device that
includes several HID devices, some of which are incorrectly
recognized as gamepads.

This CL modifies the RawInput data fetcher on Windows to
filter out devices that match the IDs for the Surface Pro 2017
keyboard. It also adds a check to exclude any PCI HID devices
since there are no known PCI gamepads.

The problematic devices intended to be filtered by this CL are:

\\?\HID#VEN_8086&DEV_9D3E&SUBSYS_00000000&REV_21&Col02#4&f87ce30&0&0004#{4d1e55b2-f16f-11cf-88cb-001111000030}
\\?\HID#VEN_8086&DEV_9D3E&SUBSYS_00000000&REV_21&Col05#4&f87ce30&0&0004#{4d1e55b2-f16f-11cf-88cb-001111000030}
\\?\HID#VID_045E&PID_0922&Col06#7&36425755&0&0005#{4d1e55b2-f16f-11cf-88cb-001111000030}
\\?\HID#VID_045E&PID_0922&Col09#7&36425755&0&0008#{4d1e55b2-f16f-11cf-88cb-001111000030}

BUG=881156

Change-Id: I04687ffc94c92c284928eaec28c1edc85d05bf33
Reviewed-on: https://chromium-review.googlesource.com/1211978
Commit-Queue: Matt Reynolds <mattreynolds@chromium.org>
Reviewed-by: Brandon Jones <bajones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594095}
Former-commit-id: e2dfd3b0d5ca9602b4d76f1443e755404febabe8